--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </head>
 <body>
     <h1>Scraps Odds Calculator</h1>
+    <h2>It is your choice if you would like to take the risk of getting a item, both me and the Hack Club team highly advise doing the full hours instead of gambling!</h2>
     <p>Do not write percentages, write just the number instead (im too lazy to add input validation)</p><br>
 
     <p>Price per roll:</p>
@@ -122,5 +123,6 @@
 
     </script>
 </body>
+
 
 </html>
