Make instructions a little bit more clear

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <body>
     <h1>Scraps Odds Calculator</h1>
     <h2>It is your choice if you would like to take the risk of getting a item, both me and the Hack Club team highly advise doing the full hours instead of gambling!</h2>
-    <p>Do not write percentages, write just the number instead (im too lazy to add input validation)</p><br>
+    <p>Do not write percentages, write just the number instead (im too lazy to add input validation)</p>
+    <p>E.g., enter 50 instead of 50%.</p><br>
 
     <p>Price per roll:</p>
     <input type="text" id="PricePerRollInput" placeholder="Price per roll"> <br>
@@ -126,3 +127,4 @@
 
 
 </html>
+
