--- a/budget.html
+++ b/budget.html
@@ -62,6 +62,7 @@
 
 </head>
 <body>
+    <h1> This website is no longer accurate as formulas have changed, this will be updated asap!<h1></h1>
     <h1>Scraps Odds Calculator</h1>
     <p>Do not write percentages, write just the number instead (im too lazy to add input validation)</p><br>
 
